--- a/package.json
+++ b/package.json
@@ -10,5 +10,8 @@
     "lint": "eslint src",
     "format": "prettier --write src",
     "format:check": "prettier --check src"
+  },
+  "dependencies": {
+    "moment": "^2.30.1"
   }
 }
